--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,6 +3,8 @@
     <link rel="stylesheet" type="text/css" href="/style.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react-dom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.6.0/redux.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/4.4.5/react-redux.min.js"></script>
   </head>
   <body>
     <div id="app">foo</div>
