--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,9 @@
       body {
         margin: 0;
       }
+      input:-webkit-autofill {
+          -webkit-box-shadow: 0 0 0px 1000px white inset;
+      }
     </style>
   </head>
   <body>
