--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <!--RAILS_RENDERED_INIT_DATA-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/1.0.0/fetch.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.6.0/redux.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
