--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,6 +2,8 @@
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/1.0.0/fetch.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.6.0/redux.min.js"></script>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <style>
@@ -12,6 +14,7 @@
           -webkit-box-shadow: 0 0 0px 1000px white inset;
       }
     </style>
+    <title>AVA</title>
   </head>
   <body>
     <div id="app"></div>
